user view job set
