# app/Http/Controllers/AuthController.php
@@ -67,6 +67,7 @@ class AuthController extends Controller
      *             @OA\Property(property="name", type="string"),
      *             @OA\Property(property="email", type="string", format="email"),
      *             @OA\Property(property="password", type="string", format="password"),
+     *             @OA\Property(property="password_confirmation", type="string", format="password"),
      *             @OA\Property(property="role", type="string", enum={"user", "admin", "employer"})
      *         )
      *     ),
